@@ -12,11 +12,10 @@ public class SelectQueryStringParser extends  QueryStringParser{
     public static List<String> parseColumnNames(String s){
         Pattern p = Pattern.compile("\\bSELECT\\s+(.{2,})\\sFROM\\b", Pattern.CASE_INSENSITIVE);
         Matcher m = p.matcher(s);
-        if (!m.find()) return null;
-        String[] columnNames = m.group(1).split("[\\s,]+");
-        return Arrays.asList(columnNames);
+        if (!m.find()) return List.of("*");
+        return Arrays.asList(m.group(1).split("[\\s,]+"));
     }
-
+    @Deprecated
     public static OperatorBehaviour parseWhereConditionOperator(String queryString){
         Pattern p = Pattern.compile(".*?\\bWHERE\\s+\\w+\\s+(.).*");
         Matcher m = p.matcher(queryString.trim());
@@ -25,7 +24,7 @@ public class SelectQueryStringParser extends  QueryStringParser{
         }
         return null;
     }
-
+    @Deprecated
     public static String getOperandFromWhereCondition(String queryString){
         Pattern p = Pattern.compile("\\s(\\w+)$");
         Matcher m = p.matcher(queryString.trim());
@@ -34,7 +33,7 @@ public class SelectQueryStringParser extends  QueryStringParser{
         }
         return null;
     }
-
+    @Deprecated
     public static String parseColumnNameFromWhereCondition(String queryString){
         Pattern p = Pattern.compile(".*?\\bWHERE\\s+(\\w+)\\b.*");
         Matcher m = p.matcher(queryString);
